src/css/base.css
:root {
  --font-family: 'Fredoka', sans-serif;
  --second-family: 'Nunito', sans-serif;
  --third-family: 'Inter', sans-serif;
}

:root {
  --grey2: #535252;
  --grey: #d9d9d9;
  --black: #000;
  --green: #7ead73;
  --blue2: #1990ff;
  --orange: #fd9a18;
  --red: #8d0000;
  --white: #fff;
  --blue: #91c4ff;
}

* {
  box-sizing: border-box;
  scroll-behavior: smooth;
}

body {
  display: flex;
  flex-direction: column;
  background-color: var(--green);
  margin: 0;
}
body[data-menu='open'] {
  overflow: hidden;
}
section {
  scroll-margin-top: 100px;
}

